cha-pre-live-flux2/cha-eks-5a/namespaces/supdem-systest/namespace-supdem-systest.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: supdem-systest
  name: supdem-systest
