cha-pre-live-flux2/cha-eks-5a/namespaces/supdem-systest/network-policy-apps.yaml
####################################################
## Allow ingress from supdem-systest and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-supdem-systest
  namespace: supdem-systest
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: supdem-systest
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from supdem-systest ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-supdem-systest
  namespace: supdem-systest
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: supdem-systest

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: supdem-systest
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

#########################################
## Allow SQL Server egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-sql-server
  namespace: supdem-systest
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 1433
      protocol: TCP
    - port: 55001
      protocol: TCP
    - port: 55000
      protocol: TCP
    - port: 55002
      protocol: TCP  

################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: supdem-systest
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring
